data/derived/sp14/progs/unify/prog1373.ml.out
Characters 64-65:
  | h::t -> h::(append x t);;
                         ^
Error: This expression has type 'a list
       but an expression was expected of type int
